00-parametros.sh nas configurações do TFTP-HPA, acrescentado os caminhos do PXELinux e do Syslinux para a copia dos
arquivos de inicialização do Boot PXE do TFTP-HPA, criado o arquivo: default com as informações do PXE Grub Menu,
alterado o script: 06-tftphpa.sh adicionado as opções de copiar dos arquivos do PXELinux e Syslinux para o diretório
do TFTP, correção do caminho do backup do arquivo de Zonas Padrão do Bind9: named.conf.default-zones no script:
03-dns.sh, caminho estava configurado como: /etc/default/ correto é: /etc/bind/. 

30/03/2022 - Robson Vaamonde - Analisando o BUG: 0015 (Falha de Relógio do Kernel não Sincronizado NTP Server), foi
adicionado no arquivo de configuração: ntp.conf a opção: +sysall na linha de Log no NTP Server para facilitar o Debug
da falha, foi adicionado o comando: ntptime no script: 05-ntp.sh para facilitar as informações e sincronismo da data 
e hora do Kernel, ainda analisando o BUG, conforme vários artigos e comentários nos fóruns de GNU/Linux essa mensagem 
e normal, não sendo uma falha do NTP Server, está associada inicialmente devido ao sincronismo da data hora com os 
servidores remotos não ser feita de forma rápida, depois de alguns minutos/horas o sincronismo e feito e a mensagem 
não aparece mais, analisando mais opções de configuração do arquivo ntp.conf.

28/03/2022 - Robson Vaamonde - Grande atualização da organização do scripts do Curso do Ubuntu Server, alteração da
numeração dos scripts para facilitar a instalação e configuração dos serviços de rede, script do NFS Sever e Webdav
foram trazidos para o início do curso facilitando o acesso dos arquivos remotos no servidor, foi desmembrado o script
do OpenSSL separando a criação da CA (Certificate Authority) dos Certificados Assinados CRT (Certificate Request Trust) 
de cada serviço de rede, atualização do script: 00-parametros.sh reorganizando as variáveis da numeração dos novos