@@ -284,6 +284,9 @@ PATHTFTP="/var/lib/tftpboot"
 PATHPXE="/usr/lib/PXELINUX"
 PATHSYSLINUX="/usr/lib/syslinux"
 #
+# Variável de download do software de teste de memória Memtest86 (Link atualizado em: 31/03/2022)
+MEMTEST86="http://www.memtest.org/download/5.31b/memtest86+-5.31b.bin.gz"
+#
 # Variável das dependências do laço de loop do TFTP-HPA Server
 TFTPDEP="bind9 bind9utils isc-dhcp-server"
 #
