@@ -11,7 +11,7 @@
 # Versão: 0.01
 # Testado e homologado para a versão do Ubuntu Server 20.04.x LTS x64
 # Testado e homologado para a versão do TFTP-HPA v5.2.x e PXE Syslinux v
-
+#
 # Configuração padrão do Boot Menu
 default vesamenu.c32
 prompt 0
@@ -25,6 +25,6 @@ label puppy
 #
 # Configuração da inicialização o Mentest
 label memtest86
-  menu label ^Memory test
+  menu label ^Teste de Memória RAM
   kernel memtest
   append -
